Modernise - Java language migrations.